--- a/NETA2026_ll_mock_exam_200_full_v2.html
+++ b/NETA2026_ll_mock_exam_200_full_v2.html
@@ -75,7 +75,7 @@ const questions = [
 {q:"A transformer tap changer adjusts:", A:"Frequency", B:"Voltage", C:"Insulation", D:"Power factor", ans:"B"},
 {q:"A motor surge test detects:", A:"Turn-to-turn shorts", B:"Ground faults", C:"Bearing failure", D:"Phase rotation", ans:"A"},
 {q:"Motor insulation is tested using a:", A:"DLRO", B:"TTR", C:"Megger", D:"Clamp meter", ans:"C"},
-{q:"Relay element 94 is:", A:"Tripping", B:"Restart delay", C:"Motor overload", D:"Bus differential", ans:"D"},
+{q:"Relay element 94 is:", A:"Tripping", B:"Restart delay", C:"Motor overload", D:"Bus differential", ans:"B"},
 {q:"What is x/r ratio?", A:"Inductive vs resistive reactance", B:"Voltage ratio", C:"Current ratio", D:"Power factor", ans:"A"},
 {q:"Cable aging is caused by:", A:"UV", B:"Moisture", C:"Heat", D:"All of the above", ans:"D"},
 {q:"What relay element detects overfrequency?", A:"81O", B:"27", C:"59", D:"50", ans:"A"},
@@ -85,8 +85,8 @@ const questions = [
 {q:"What test finds turn-to-turn faults?", A:"Surge test", B:"IR", C:"PF", D:"Ratio test", ans:"A"},
 {q:"Capacitor banks improve:", A:"Voltage", B:"Frequency", C:"Power factor", D:"Resistance", ans:"C"},
 {q:"What does a phase angle meter measure?", A:"kW", B:"Current", C:"Degree difference", D:"Voltage", ans:"C"},
-{q:"A motor megged at 2 MΩ is:", A:"Good", B:"Borderline", C:"Bad", D:"Failed", ans:"A"},
-{q:"A transformer with 0% PF means:", A:"Poor insulation", B:"Good insulation", C:"Saturated", D:"Overloaded", ans:"A"},
+{q:"A motor megged at 2 MΩ is:", A:"Good", B:"Borderline", C:"Bad", D:"Failed", ans:"B"},
+{q:"A transformer with 0% PF means:", A:"Poor insulation", B:"Good insulation", C:"Saturated", D:"Overloaded", ans:"B"},
 {q:"Breaker failure detection relay is:", A:"50", B:"51", C:"62BF", D:"27", ans:"C"},
 {q:"VLF testing uses:", A:"0.1 Hz", B:"60 Hz", C:"400 Hz", D:"DC", ans:"A"},
 {q:"What causes CT heating?", A:"Overload", B:"Underload", C:"Low burden", D:"Loose polarity", ans:"A"},
@@ -121,7 +121,7 @@ const questions = [
 {q:"Power factor correction reduces:", A:"Voltage", B:"Reactive power", C:"Frequency", D:"Load current", ans:"B"},
 {q:"Low PF means:", A:"High reactive power", B:"Low reactive power", C:"Balanced loads", D:"Low voltage", ans:"A"},
 {q:"CT secondary wiring continuity is checked using:", A:"DLRO", B:"Megger", C:"TTR", D:"Hipot", ans:"A"},
-{q:"Relay element 24 is:", A:"Overexcitation", B:"Undervoltage", C:"Overcurrent", D:"Frequency", ans:"C"},
+{q:"Relay element 24 is:", A:"Overexcitation", B:"Undervoltage", C:"Overcurrent", D:"Frequency", ans:"A"},
 {q:"What causes PT fuse blowing?", A:"Faulty PT", B:"Incorrect ratio", C:"High IR", D:"Low PF", ans:"A"},
 {q:"Transformer bushing failure often due to:", A:"Moisture", B:"High IR", C:"Low voltage", D:"Proper torque", ans:"A"},
 {q:"A TTR reading too high indicates:", A:"Shorted turns", B:"Open winding", C:"Good ratio", D:"Core saturation", ans:"B"},
