--- a/NETA2026_ll_mock_exam_200_full_v2.html
+++ b/NETA2026_ll_mock_exam_200_full_v2.html
@@ -121,13 +121,12 @@ const questions = [
 {q:"Power factor correction reduces:", A:"Voltage", B:"Reactive power", C:"Frequency", D:"Load current", ans:"B"},
 {q:"Low PF means:", A:"High reactive power", B:"Low reactive power", C:"Balanced loads", D:"Low voltage", ans:"A"},
 {q:"CT secondary wiring continuity is checked using:", A:"DLRO", B:"Megger", C:"TTR", D:"Hipot", ans:"A"},
-{q:"Relay element 24 is:", A:"Overexcitation", B:"Undervoltage", C:"Overcurrent", D:"Frequency", ans:"A"},
 {q:"What causes PT fuse blowing?", A:"Faulty PT", B:"Incorrect ratio", C:"High IR", D:"Low PF", ans:"A"},
 {q:"Transformer bushing failure often due to:", A:"Moisture", B:"High IR", C:"Low voltage", D:"Proper torque", ans:"A"},
 {q:"A TTR reading too high indicates:", A:"Shorted turns", B:"Open winding", C:"Good ratio", D:"Core saturation", ans:"B"},
 {q:"Cable sheath damage causes:", A:"High insulation leakage", B:"High capacitance", C:"High resistance", D:"Low harmonics", ans:"A"},
   {q:"What device steps voltage down for relays/meters?", A:"CT", B:"PT", C:"Capacitor", D:"Breaker", ans:"B"},
-  {q:"A DC hipot is typically used for:", A:"Motors", B:"Transformers", C:"Cables", D:"Breakers", ans:"B"},
+  {q:"A DC hipot is typically used for:", A:"Motors", B:"Transformers", C:"Cables", D:"Breakers", ans:"C"},
   {q:"What type of fault causes highest current?", A:"Line-to-ground", B:"Line-to-line", C:"3-phase", D:"Double-line-ground", ans:"C"},
   {q:"What meter measures harmonics?", A:"DLRO", B:"Power quality analyzer", C:"TTR", D:"Megger", ans:"B"},
   {q:"Infrared testing detects:", A:"Hot spots", B:"Polarity", C:"Insulation moisture", D:"Turn ratio", ans:"A"},
@@ -136,7 +135,7 @@ const questions = [
   {q:"What is cable tan delta testing for?", A:"Contact erosion", B:"Insulation aging", C:"Timing", D:"Ratio", ans:"B"},
   {q:"What is the danger of open CT secondary?", A:"High voltage induced", B:"High current", C:"Breaker tripping", D:"Relay malfunction", ans:"A"},
   {q:"Relay element 51 is:", A:"Instantaneous", B:"Time overcurrent", C:"Differential", D:"Undervoltage", ans:"B"},
-  {q:"When do you test breaker coil resistance?", A:"Before energization", B:"During operation", C:"After relay test", D:"Only after failure", ans:"B"},
+  {q:"When do you test breaker coil resistance?", A:"Before energization", B:"During operation", C:"After relay test", D:"Only after failure", ans:"A"},
   {q:"What device isolates transformer oil from air?", A:"Conservator", B:"Radiator", C:"LTC", D:"Primary winding", ans:"A"},
   {q:"Causes of CT saturation?", A:"Low burden", B:"High primary current", C:"Open PT", D:"Relay failure", ans:"B"},
   {q:"Transformer inrush causes:", A:"High frequency", B:"High harmonic current", C:"Low impedance", D:"Overvoltage", ans:"B"},
@@ -147,17 +146,16 @@ const questions = [
   {q:"A cable hipot failure usually shows:", A:"Low leakage", B:"High leakage", C:"No current", D:"Pure sine wave", ans:"B"},
   {q:"A failed PT often shows:", A:"Low voltage output", B:"High IR", C:"Perfect ratio", D:"High capacitance", ans:"A"},
   {q:"Breaker slow closing time indicates:", A:"Weak closing spring", B:"Good lubrication", C:"Good mechanism", D:"Low resistance", ans:"A"},
-  {q:"Which relay detects reverse power?", A:"32", B:"87", C:"27", D:"59", ans:"C"},
+  {q:"Which relay detects reverse power?", A:"32", B:"87", C:"27", D:"59", ans:"A"},
   {q:"CT test performed before ratio test:", A:"Saturation", B:"Polarity", C:"Burden", D:"IR", ans:"B"},
   {q:"Cable shield continuity is checked using:", A:"DLRO", B:"Megger", C:"TTR", D:"Hipot", ans:"A"},
   {q:"What indicates loose connection?", A:"Low IR", B:"High temperature", C:"Low voltage", D:"High torque", ans:"B"},
-  {q:"Relay element 81 is:", A:"Overcurrent", B:"Frequency", C:"Power factor", D:"Reverse power", ans:"D"},
+  {q:"Relay element 81 is:", A:"Overcurrent", B:"Frequency", C:"Power factor", D:"Reverse power", ans:"B"},
   {q:"Cold load pickup causes:", A:"Low inrush", B:"High inrush", C:"Low voltage", D:"PF drop", ans:"B"},
   {q:"Transformer oil should be tested:", A:"Weekly", B:"Monthly", C:"Annually", D:"Never", ans:"C"},
   {q:"What does a VFD output?", A:"Sine wave", B:"PWM waveform", C:"DC", D:"Pure AC", ans:"B"},
   {q:"What identifies motor rotation?", A:"IR meter", B:"Phase rotation meter", C:"DLRO", D:"Megger", ans:"B"},
   {q:"What test checks dryness of insulation?", A:"PI", B:"DLRO", C:"TTR", D:"Burden", ans:"A"},
-  {q:"Relay element 94 is:", A:"Tripping", B:"Restart delay", C:"Motor overload", D:"Bus differential", ans:"A"},
   {q:"What is x/r ratio?", A:"Inductive vs resistive reactance", B:"Voltage ratio", C:"Current ratio", D:"Power factor", ans:"A"},
   {q:"Cable aging is caused by:", A:"UV", B:"Moisture", C:"Heat", D:"All of the above", ans:"D"},
   {q:"What relay element detects overfrequency?", A:"81O", B:"27", C:"59", D:"50", ans:"A"},
@@ -167,8 +165,6 @@ const questions = [
   {q:"What test finds turn-to-turn faults?", A:"Surge test", B:"IR", C:"PF", D:"Ratio test", ans:"A"},
   {q:"Capacitor banks improve:", A:"Voltage", B:"Frequency", C:"Power factor", D:"Resistance", ans:"C"},
   {q:"What does a phase angle meter measure?", A:"kW", B:"Current", C:"Degree difference", D:"Voltage", ans:"C"},
-  {q:"A motor megged at 2 MΩ is:", A:"Good", B:"Borderline", C:"Bad", D:"Failed", ans:"A"},
-  {q:"A transformer with 0% PF means:", A:"Poor insulation", B:"Good insulation", C:"Saturated", D:"Overloaded", ans:"A"},
   {q:"Breaker failure detection relay is:", A:"50", B:"51", C:"62BF", D:"27", ans:"C"},
   {q:"VLF testing uses:", A:"0.1 Hz", B:"60 Hz", C:"400 Hz", D:"DC", ans:"A"},
   {q:"What causes CT heating?", A:"Overload", B:"Underload", C:"Low burden", D:"Loose polarity", ans:"A"},
@@ -182,13 +178,11 @@ const questions = [
   {q:"What causes breaker chatter?", A:"Low control voltage", B:"High control voltage", C:"High resistance", D:"CT error", ans:"A"},
   {q:"What detects loose bolted joints?", A:"IR test", B:"Thermal imaging", C:"TTR", D:"Surge test", ans:"B"},
   {q:"Tap changers adjust:", A:"Frequency", B:"Power factor", C:"Voltage", D:"Load", ans:"C"},
-  {q:"Relay element 46 protects against:", A:"Reverse power", B:"Phase imbalance", C:"Differential", D:"Power factor", ans:"C"},
   {q:"Battery bank testing checks:", A:"Ah capacity", B:"Voltage ratio", C:"Current ratio", D:"Harmonics", ans:"A"},
   {q:"Battery cells in series increase:", A:"Voltage", B:"Current", C:"Frequency", D:"Temperature", ans:"A"},
   {q:"Ground grid corrosion increases:", A:"Resistance", B:"Voltage", C:"Current", D:"Capacitance", ans:"A"},
   {q:"DC control circuits use:", A:"Fuses", B:"Breakers", C:"Both", D:"None", ans:"C"},
   {q:"High resistance grounding reduces:", A:"Phase current", B:"Ground-fault current", C:"Voltage", D:"Frequency", ans:"B"},
-  {q:"A ground fault on HRG system causes:", A:"Trip immediately", B:"Alarm only", C:"Shutdown", D:"No indication", ans:"C"},
   {q:"What test checks transformer core?", A:"Excitation", B:"Ratio", C:"IR", D:"DLRO", ans:"A"},
   {q:"SRP (schematic review procedure) verifies:", A:"Wiring correctness", B:"CT burden", C:"PF test", D:"Oil level", ans:"A"},
   {q:"Torque too low on breaker lugs causes:", A:"Good connection", B:"Loose connection", C:"High IR", D:"Low current", ans:"B"},
@@ -203,7 +197,6 @@ const questions = [
   {q:"Power factor correction reduces:", A:"Voltage", B:"Reactive power", C:"Frequency", D:"Load current", ans:"B"},
   {q:"Low PF means:", A:"High reactive power", B:"Low reactive power", C:"Balanced loads", D:"Low voltage", ans:"A"},
   {q:"CT secondary wiring continuity is checked using:", A:"DLRO", B:"Megger", C:"TTR", D:"Hipot", ans:"A"},
-  {q:"Relay element 24 is:", A:"Overexcitation", B:"Undervoltage", C:"Overcurrent", D:"Frequency", ans:"C"},
   {q:"What causes PT fuse blowing?", A:"Faulty PT", B:"Incorrect ratio", C:"High IR", D:"Low PF", ans:"A"},
   {q:"Transformer bushing failure often due to:", A:"Moisture", B:"High IR", C:"Low voltage", D:"Proper torque", ans:"A"},
   {q:"A TTR reading too high indicates:", A:"Shorted turns", B:"Open winding", C:"Good ratio", D:"Core saturation", ans:"B"},
@@ -225,7 +218,7 @@ const questions = [
   {q:"A transformer with no load noise increase indicates:", A:"Loose core", B:"High load", C:"Good winding", D:"Low PF", ans:"A"},
   {q:"LTC contact wear is found using:", A:"Contact resistance", B:"IR test", C:"Ratio test", D:"Hipot", ans:"A"},
   {q:"Capacitor banks must be discharged because:", A:"They store energy", B:"They saturate CT", C:"They lower PF", D:"They are DC devices", ans:"A"},
-  {q:"Relay element 27 protects against:", A:"Overvoltage", B:"Undervoltage", C:"Reverse power", D:"Phase unbalance", ans:"C"},
+  {q:"Relay element 27 protects against:", A:"Overvoltage", B:"Undervoltage", C:"Reverse power", D:"Phase unbalance", ans:"B"},
 
 ];
 
