--- a/NETA2026_ll_mock_exam_200_full_v2.html
+++ b/NETA2026_ll_mock_exam_200_full_v2.html
@@ -30,7 +30,7 @@ const questions = [
 {q:"A CT with the primary conductor passing through its window is which type?", A:"Bar-type", B:"Window-type", C:"Wound-type", D:"Split-core", ans:"B"},
 {q:"When must insulated tools be used?", A:"Outside the arc flash boundary", B:"Inside the restricted approach boundary", C:"Inside the limited boundary", D:"No requirement", ans:"B"},
 {q:"A network protector is normally rated:", A:"15 kV 600 A", B:"480/277 V", C:"216–600 V, 800–6200 A", D:"34.5 kV", ans:"C"},
-{q:"What current is used to test contact resistance of a circuit switcher?", A:"5 A", B:"10 A", C:"40 A", D:"100 A", ans:"C"},
+{q:"What current is used to test contact resistance of a circuit switcher?", A:"5 A", B:"10 A", C:"40 A", D:"100 A", ans:"D"},
 {q:"What are the 4 leads of a Kelvin connection?", A:"1 hot, 1 neutral, 2 ground", B:"2 current, 2 voltage", C:"4 voltage", D:"4 current", ans:"B"},
 {q:"When is a CT secondary shorted?", A:"During primary injection", B:"During TTR testing", C:"When disconnected from burden", D:"During megger testing", ans:"C"},
 {q:"What is a safe condition for a PT secondary?", A:"Open", B:"Shorted", C:"Grounded through resistor", D:"Energized", ans:"C"},
