--- a/NETA2026_ll_mock_exam_100_MCQ_v1.html
+++ b/NETA2026_ll_mock_exam_100_MCQ_v1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>NETA Level II — 200 Question Mock Exam</title>
+<title>NETA Level II — 100 Original Question</title>
 <style>
 body{font-family:Arial,sans-serif;margin:20px;color:#111}
 h1{font-size:1.4rem;margin-bottom:0}
